@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2021, 2023 Obeo.
+ * Copyright (c) 2021, 2024 Obeo.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v2.0
  * which accompanies this distribution, and is available at
@@ -24,4 +24,14 @@ export interface TreeItemProps {
   textToFilter: string | null;
   enableMultiSelection: boolean;
   markedItemIds: string[];
+}
+
+export interface TreeItemState {
+  showContextMenu: boolean;
+  menuAnchor: Element | null;
+  editingMode: boolean;
+  label: string;
+  prevSelectionId: string | null;
+  editingKey: string | null;
+  isHovered: boolean;
 }
