@@ -48,7 +48,7 @@ As a result, all the APIs relying on this code have been deleted too such as the
 - https://github.com/eclipse-sirius/sirius-web/issues/3042[#3042] [core] IObjectService have been divided in smaller API IContentService, IObjectSearchService, IIdentityService and ILabelService.
 If you used the default implementation of `IObjectService` you can still use it to retrieve the default implementation of the new services.
 Yet we are recommending using each individual services since this aggregated one may be deprecated in the future.
-If you want to add your own custom behaviour, please use the new services, see the related ADR for more details.
+If you want to add your own custom behavior, please use the new services, see the related ADR for more details.
 - https://github.com/eclipse-sirius/sirius-web/issues/3066[#3066] [core] `IObjectSearchService`, `IIdentityService`, `ILabelService` now can also find/resolve representations.
 This changes a core assumption from before where an element known to those services (i.e. an element for which `IIdentityService.getId` returned a non-null value) was a "semantic element" and thus *could not be* a representation.
 - https://github.com/eclipse-sirius/sirius-web/issues/3021[#3021] [sirius-web] Remove the interfaces `IRepresentationDescriptionRegistry` and `IRepresentationDescriptionRegistryConfigurer` to replace them with `IEditingContextRepresentationDescriptionProvider` which provides the same feature but also gives access to the editing context for conditional registration of representation descriptions.
@@ -66,7 +66,7 @@ Having `Viewer` as a type did not bring any additional value and it created some
 === Dependency update
 
 - https://github.com/eclipse-sirius/sirius-web/issues/2783[#2783] [diagram] Remove our dependency to Sprotty and Snabbdom
-- https://github.com/eclipse-sirius/sirius-web/issues/3105[#3105] [deck] Move to @obeonetwork/react-trello 2.4.11 to avoid warnings because of react-redux depending on react 16.
+- https://github.com/eclipse-sirius/sirius-web/issues/3105[#3105] [deck] Move to @ObeoNetwork/react-trello 2.4.11 to avoid warnings because of react-redux depending on react 16.
 
 === Bug fixes
 
@@ -87,6 +87,7 @@ Having `Viewer` as a type did not bring any additional value and it created some
 - https://github.com/eclipse-sirius/sirius-web/issues/3143[#3143] [diagram] Fix an issue where the default icon was consistently being used for EdgeTool
 The implemented fix does not allow to evaluate an AQL expression, but only to retrieve a static value.
 - https://github.com/eclipse-sirius/sirius-web/issues/3166[#3166] [diagram] Fix an issue where label edit tool did nothing on nodes with outside label.
+- https://github.com/eclipse-sirius/sirius-web/issues/1707[#1707] [diagram] Fix an issue where changing cursor position through a click while editing a tree item label lead to the end of the edition.
 
 === New Features
 
